# project-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name_ref}}/: Dockerfile  README.md  pyproject.toml  requirements.txt
{{cookiecutter.project_name_ref}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name_ref}}/notebooks/: exploratory_data_analysis.ipynb
{{cookiecutter.project_name_ref}}/notebooks/exploratory_data_analysis/: exploratory_data_analysis.ipynb
{{cookiecutter.project_name_ref}}/src/: evaluation.py  modeling.py  preprocessing.py
