[tool.poetry]
name = "{{cookiecutter.project_name_ref}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
jupyter-summarytools = "^0.2.3"
